--- a/index.html
+++ b/index.html
@@ -12,13 +12,23 @@
 
 </head>
 
-<body>
-    <header>
-        <h1>My Personal Accountant</h1>
+<body class="container">
+    <header class="my-5">
+        <h1 class="text-center text-info fw-bold">My Personal Accountant</h1>
     </header>
 
     <main>
+        <section class="d-flex">
+            <div class="row">
+                <div class="col-6">
+                    <img class="img-fluid" src="images/banner.jpg" alt="">
+                </div>
+                <div class="col-6 text-center">
+                    <h1>calculation</h1>
+                </div>
 
+            </div>
+        </section>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
