basic design done

--- a/index.html
+++ b/index.html
@@ -19,12 +19,23 @@
 
     <main>
         <section class="d-flex">
-            <div class="row">
-                <div class="col-6">
+            <div class="row gx-5">
+                <div class="col-7">
                     <img class="img-fluid" src="images/banner.jpg" alt="">
                 </div>
-                <div class="col-6 text-center">
-                    <h1>calculation</h1>
+                <div class="col-5 text-center bg-secondary p-5">
+                    <h4>Income</h4>
+                    <p>Income: <input type="text"></p>
+                    <h4>Expenses</h4>
+                    <p>Food: <input type="text"></p>
+                    <p>Rent: <input type="text"></p>
+                    <p>Colthes: <input type="text"></p>
+                    <button type="submit">Calculate</button>
+                    <h4>Total Expenses: <span></span></h4>
+                    <h4>Balance: <span></span></h4>
+                    <p>Save: <input type="text"> % <button type="submit">Save</button></p>
+                    <h4>Saving Amount: <span></span></h4>
+                    <h4>Remaining Balance: <span></span></h4>
                 </div>
 
             </div>
