--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     </header>
 
     <main>
-        <section class="d-flex justify-content-between">
-            <div class="row gx-5">
-                <div class="col-12 col-lg-7">
-                    <img class="img-fluid" src="images/Background.png" alt="">
+        <section>
+            <div class="row gx-0 gx-lg-5 align-content-lg-stretch">
+                <div class="col-12 col-lg-7 rounded">
+                    <img class="img-fluid rounded" src="images/Background.png" alt="">
                 </div>
-                <div class="calculation-section col-12 col-lg-5 text-center p-5">
+                <div class="calculation-section col-12 col-lg-5 p-5 m-lg-0 mt-4 text-center">
                     <h5 class="mb-4">Income</h5>
                     <p>Income: <input id="total-income" type="text"></p>
 
@@ -32,19 +32,23 @@
                     <p>Rent: <input id="rent-expense" type="text"></p>
                     <p>Colthes: <input id="cloth-expense" type="text"></p>
 
-                    <button id="calculate-btn" type="submit">Calculate</button>
+                    <button class="mt-2 mb-3" id="calculate-btn" type="submit">Calculate</button>
 
-                    <h5>Total Expenses: <span id="total-expense"></span></h5>
-                    <h5>Balance: <span id="balance"></span></h5>
+                    <h5 class="mb-3">Total Expenses: <span id="total-expense"></span></h5>
+                    <h5 class="mb-3">Balance: <span id="balance"></span></h5>
 
-                    <p>Save: <input id="saving-percentage" type="text"> % <button id="save-btn"
+                    <p class="mt-4">Save: <input id="saving-percentage" type="text"> % <button id="save-btn"
                             type="submit">Save</button></p>
                     <h5>Saving Amount: <span id="saving-amount"></span></h5>
                     <h5>Remaining Balance: <span id="remaining-balance"></span></h5>
                 </div>
-
             </div>
         </section>
+
+        <div id="alert-box" class="alert">
+            <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+            <p id="error-msg"></p>
+        </div>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
