--- a/index.html
+++ b/index.html
@@ -6,24 +6,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Personal Accountant</title>
+    <!-- bootstrap stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- custom css stylesheet -->
     <link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body class="container">
+
+    <!-- header section  -->
     <header class="my-4">
-        <h1 class="text-center text-info fw-bold">My Personal Accountant</h1>
+        <h1 class="text-center text-info fw-bold">$$My Personal Accountant$$</h1>
     </header>
 
+    <!-- main section -->
     <main>
         <section>
             <div class="row gx-0 gx-lg-5 align-content-lg-stretch">
+                <!-- banner image  -->
                 <div class="col-12 col-lg-7 rounded">
                     <img class="img-fluid rounded" src="images/Background.png" alt="">
                 </div>
+
+                <!-- balance calculation section -->
                 <div class="calculation-section col-12 col-lg-5 p-5 m-lg-0 mt-4 text-center">
+                    <!-- main part -->
                     <h5 class="mb-4">Income</h5>
                     <p>Income: <input id="total-income" type="text"></p>
 
@@ -31,26 +40,26 @@
                     <p>Food: <input id="food-expense" type="text"></p>
                     <p>Rent: <input id="rent-expense" type="text"></p>
                     <p>Colthes: <input id="cloth-expense" type="text"></p>
-
-                    <button class="mt-2 mb-3" id="calculate-btn" type="submit">Calculate</button>
+                    <span id="main-error"></span>
+                    <br>
+                    <button class="mb-3" id="calculate-btn" type="submit">Calculate</button>
 
                     <h5 class="mb-3">Total Expenses: <span id="total-expense"></span></h5>
                     <h5 class="mb-3">Balance: <span id="balance"></span></h5>
 
+                    <!-- saving section -->
                     <p class="mt-4">Save: <input id="saving-percentage" type="text"> % <button id="save-btn"
                             type="submit">Save</button></p>
+                    <span id="saving-error"></span>
+                    <br>
                     <h5>Saving Amount: <span id="saving-amount"></span></h5>
                     <h5>Remaining Balance: <span id="remaining-balance"></span></h5>
                 </div>
             </div>
         </section>
-
-        <div id="alert-box" class="alert">
-            <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-            <p id="error-msg"></p>
-        </div>
     </main>
 
+    <!-- external js linked -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
