--- a/index.html
+++ b/index.html
@@ -11,16 +11,13 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- custom css stylesheet -->
     <link rel="stylesheet" href="css/style.css">
-
 </head>
 
 <body class="container">
-
     <!-- header section  -->
     <header class="my-4">
         <h1 class="text-center text-info fw-bold">$$My Personal Accountant$$</h1>
     </header>
-
     <!-- main section -->
     <main>
         <section>
@@ -59,7 +56,7 @@
         </section>
     </main>
 
-    <!-- external js linked -->
+    <!-- external js files -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
