--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
                 <div class="calculation-section col-12 col-lg-5 p-5 m-lg-0 mt-4 text-center">
                     <!-- main part -->
                     <h5 class="mb-4">Income</h5>
-                    <p>Income: <input id="total-income" type="text"></p>
+                    <p>Income: <input id="total-income" type="text" placeholder="Enter income amount"></p>
 
                     <h5 class="mb-4">Expenses</h5>
-                    <p>Food: <input id="food-expense" type="text"></p>
-                    <p>Rent: <input id="rent-expense" type="text"></p>
-                    <p>Colthes: <input id="cloth-expense" type="text"></p>
+                    <p>Food: <input id="food-expense" type="text" placeholder="Enter food expenses"></p>
+                    <p>Rent: <input id="rent-expense" type="text" placeholder="Enter rent amount"></p>
+                    <p>Colthes: <input id="cloth-expense" type="text" placeholder="Enter colthing expenses"></p>
                     <span id="main-error"></span>
                     <br>
                     <button class="mb-3" id="calculate-btn" type="submit">Calculate</button>
