--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Accountant</title>
+    <title>My Personal Bank</title>
+    <link rel="shortcut icon" href="images/money.png" type="image/x-icon">
     <!-- bootstrap stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -16,7 +17,8 @@
 <body class="container">
     <!-- header section  -->
     <header class="my-4">
-        <h1 class="text-center text-info fw-bold">$$My Personal Accountant$$</h1>
+        <h1 class="text-center fw-bold"><span>Personal Bank </span><img src="images/money.png" alt="" height="53">
+        </h1>
     </header>
     <!-- main section -->
     <main>
@@ -41,16 +43,16 @@
                     <br>
                     <button class="mb-3" id="calculate-btn" type="submit">Calculate</button>
 
-                    <h5 class="mb-3">Total Expenses: <span id="total-expense"></span></h5>
-                    <h5 class="mb-3">Balance: <span id="balance"></span></h5>
+                    <h5 class="mb-3">Total Expenses: <span id="total-expense">000</span></h5>
+                    <h5 class="mb-3">Balance: <span id="balance">000</span></h5>
 
                     <!-- saving section -->
                     <p class="mt-4">Save: <input id="saving-percentage" type="text"> % <button id="save-btn"
                             type="submit">Save</button></p>
                     <span id="saving-error"></span>
                     <br>
-                    <h5>Saving Amount: <span id="saving-amount"></span></h5>
-                    <h5>Remaining Balance: <span id="remaining-balance"></span></h5>
+                    <h5>Saving Amount: <span id="saving-amount">000</span></h5>
+                    <h5>Remaining Balance: <span id="remaining-balance">000</span></h5>
                 </div>
             </div>
         </section>
